syntax = "proto3";

package auth;

option go_package = "github.com/werbot/werbot/api/proto/auth";

import "validate/validate.proto";
import "user/user.proto";

service AuthHandlers {
  rpc SignIn(SignIn.Request) returns (user.User.Response) {}
  rpc ResetPassword(ResetPassword.Request) returns (ResetPassword.Response) {}
}


// rpc SignIn
message SignIn {
  message Request {
    string email = 2    [(validate.rules).string.email = true];
    string password = 3 [(validate.rules).string = { min_len: 8, max_len: 32 }];
  }

  message Response {
    string user_id = 1;
    string name = 2;
    string email = 3;
    user.Role user_role = 4;
  }
}
// -----------------------------------------------------


// rpc ResetPassword
message ResetPassword {
  message Request {
    oneof request {
      string email = 1    [(validate.rules).string.email = true];
      string password = 2 [(validate.rules).string = {min_len: 8, max_len: 32}];
    }
    string token = 3      [(validate.rules).string = {ignore_empty: true, uuid: true}];
  }

  message Response {
    string message = 1;
    string token = 2;
  }
}
// -----------------------------------------------------


message RefreshTokenRequest {
  string refresh_token = 1 [(validate.rules).string.uuid = true];
}

message UserParameters {
  string user_name = 1;
  string user_id = 2;
  user.Role roles = 3;
  string sub = 4;
}
